--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "ecommerce-react-graphql-stripe",
-  "version": "0.1.0",
+  "name": "kinnas-kitchen",
+  "version": "1.0.0",
+  "author" : "Amish Prajapati",
+  "email" : "amish.prajapati@gmail.com",
+  "url" : "https://github.com/amishpr/kinnas-kitchen",
   "private": true,
   "dependencies": {
     "eslint": "^5.16.0",
