--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "strapi-plugin-graphql": "3.5.4",
     "strapi-plugin-upload": "3.5.4",
     "strapi-plugin-users-permissions": "3.5.4",
-    "strapi-utils": "3.5.4"
+    "strapi-utils": "3.5.4",
+    "stripe": "^8.144.0"
   },
   "author": {
     "name": "A Strapi developer"
